--- a/calander/src/style.css
+++ b/calander/src/style.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.myname {
+  background-color: aqua;
+}
+
+.calander-container {
+  width: 50%;
+  margin: auto;
+}
