--- a/calander/src/style.css
+++ b/calander/src/style.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.calander-container {
+  width: 60%;
+  margin: auto;
+}
