--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,63 @@ code {
   height: fit-content;
   padding: 15px;
   background-color: whitesmoke;
+  min-width: 130px;
+}
+
+.list-container  h1{
+text-align: center;
+}
+
+#list-of-events > .list-container{
+  width:575px;
+  margin: 0px;
+}
+#list-of-events{
+  position:absolute;
+  left: -10000px;
+
+  z-index: -100001;
+}
+
+.download > button{
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 1;
+    margin: 16px 0px;
+    padding: 8px 12px;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    border-color: #8e44ad;
+    border-radius: 0;
+    color: #8e44ad;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    transition: color 150ms ease-in-out;
+    width:125px;
+}
+
+.download > button:after {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 100%;
+  background: #8e44ad;
+  z-index: -1;
+  transition: width 150ms ease-in-out;
+}
+.download > button:hover {
+  color: #fff;
+}
+.download > button:hover:after {
+  width: 110%;
 }
 
 .calender-container .fc .fc-button-primary {
@@ -109,7 +166,13 @@ code {
 
 .list-heading  > p:first-child,
 .list-item > p:first-child{
-  max-width: 300px;
+  max-width: 250px;
+  width: 100%;
+}
+
+.list-heading  > p:nth-of-type(2),
+.list-item > p:nth-of-type(2){
+  max-width: 150px;
   width: 100%;
 }
 
@@ -229,18 +292,18 @@ code {
   font-weight: bold;
   line-height: 1em;
   position: absolute;
-  top: 11px;
+  top: 12px;
   color: #fefefe;
   transition: opacity 0.25s ease-out 0.1s;
   text-transform: uppercase;
 }
 .button-switch .lbl-off {
-  right: 0.4375em;
+  right: 10px;
 }
 .button-switch .lbl-on {
   color: #fefefe;
   opacity: 0;
-  left: 0.4375em;
+  left: 18px;
 }
 .button-switch .switch {
   -webkit-appearance: none;
@@ -375,4 +438,28 @@ code {
     justify-content: space-between;
   }
 
+}
+@media print {
+  #list-of-events {
+      background-color: white;
+      height: 100%;
+      width: 100%;
+      position: fixed;
+      top: 0px;
+      left: 0;
+      margin: 0;
+      padding: 8px;
+      font-size: 14px;
+      line-height: 18px;
+      z-index: 100000000;
+  }
+
+  #list-of-events h1{
+    padding-top: 32px;
+  }
+  
+  #list-of-events > .list-container{
+    width:100%;
+  }
+  
 }
